welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:11: error: not found: value color
	setCouleurBrosse(color.YELLOW)
                         ^FlowerPot:18: error: value Red is not a member of object java.awt.Color
	faireFleur(Color.Red)
                         ^