welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.code
def faireFleur(c: Color ) {

	baisseBrosse()
	setCouleurBrosse(c)
	avance(2)
	recule()
	gauche()
	avance()
	recule(2)
	avance()
	setCouleurBrosse(color.YELLOW)

	
	
}

def growFlowers() {
	faireFleur(Color.Red)
	droite()
	avance(2)
}
